trailride layout bug fixes

--- a/css/large.css
+++ b/css/large.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 970px) {
+@media only screen and (min-width: 1025px) {
     header img {
         height: 400px;
         width: 100%;
@@ -112,6 +112,27 @@
         padding: 20px 30px; /* Even larger button padding */
         font-size: 20px; /* Larger button text size */
       }
+
+    /* Center the article */
+.trailtwo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;  /* Centers the content horizontally */
+  justify-content: center;  /* Centers content vertically */
+  text-align: center;  /* Centers text */
+}
+
+/* Center the list */
+.trailtwo ul {
+  list-style-type: none; /* Optional: Removes bullet points */
+  padding: 0;
+  margin: 0;
+}
+
+.trailtwo ul li {
+  text-align: left; /* Left-align list items for readability */
+  padding: 5px 0; /* Adds some space between list items */
+}
 
     .contact {
       display: grid;
