--- a/css/medium.css
+++ b/css/medium.css
@@ -1,4 +1,4 @@
-@media (min-width: 670px) and (max-width: 1024px) {
+@media (min-width: 701px) and (max-width: 1024px) {
     header img {
       height: auto;
       width: 100%;
@@ -9,11 +9,10 @@
         margin: 0 0 15px 5px;
         text-shadow: 2px 2px 10px black; /* Make text stand out */
       }
-
-      
-    .horsespring-motto p {
-        
-    }
+    
+      .motto {
+        font-size: x-large;
+      }
 
     .horseCards {
       margin: 20px;
@@ -62,6 +61,27 @@
         padding: 15px 25px; /* Makes the button larger */
         font-size: 18px;    /* Increases button text size */
       }
+
+      /* Center the article */
+.trailtwo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;  /* Centers the content horizontally */
+  justify-content: center;  /* Centers content vertically */
+  text-align: center;  /* Centers text */
+}
+
+/* Center the list */
+.trailtwo ul {
+  list-style-type: none; /* Optional: Removes bullet points */
+  padding: 0;
+  margin: 0;
+}
+
+.trailtwo ul li {
+  text-align: left; /* Left-align list items for readability */
+  padding: 5px 0; /* Adds some space between list items */
+}
 
   .map {
       display: block;
